# VehicleTypeDetection

./: Project  README.md
BackgroundSubtrtaction/: readMe.txt
BackgroundSubtrtaction/CNT/: ex1.py
BackgroundSubtrtaction/GMG/: ex1.py
BackgroundSubtrtaction/GMM/: ex1.py
BackgroundSubtrtaction/KNN/: ex1.py
BackgroundSubtrtaction/MOG/: ex1.py
BackgroundSubtrtaction/MOG2/: ex1.py
Blob Detection/: CMakeLists.txt  kalmanTest2.cpp  readMe.txt
ComputerVisionBasedObjectDetection/FLANN/: CMakeLists.txt  demo.cpp
ComputerVisionBasedObjectDetection/HaarsCascade/: CMakeLists.txt  demo.cpp
ComputerVisionBasedObjectDetection/HarisCorner/: CMakeLists.txt  demo.cpp
ComputerVisionBasedObjectDetection/ORB/: CMakeLists.txt  demo.cpp
ComputerVisionBasedObjectDetection/SIFT/: CMakeLists.txt  demo.cpp
ComputerVisionBasedObjectDetection/SURF/: CMakeLists.txt
DeepLearningBasedDetection/HaarCascadeDeepLEarningPrediction/: label_image.py
DeepLearningBasedDetection/HaarCascadeDeepLearningPredictionWithLanes/: label_image.py
DeepLearningBasedDetection/VehiclePositiveNegative/: retrained_labels.txt
DeepLearningBasedDetection/VehiclePositiveNegative/training_summaries_vehi/basic/validation/: events.out.tfevents.1496160605.b51cf804a4c7
Project/: Readme  cascade.xml  cctv.txt  classifier.py  detector.py  displayImage.py  label_image.py  retrained_labels.txt  sort.py  vid.sh
SURF/: demo.cpp
